--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,16 @@
   <artifactId>cadastro</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <java.version>1.8</java.version>
+    <junit.version>4.12</junit.version>
+    <cucumber.version>5.6.0</cucumber.version>
+    <maven.compiler.version>3.8.1</maven.compiler.version>
+    <maven.surefire.version>2.22.1</maven.surefire.version>
+  </properties>
+  
+  
   <dependencies>
   		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
@@ -32,4 +42,24 @@
 			<version>1.2.5</version>
 		</dependency>  
   </dependencies>
+  
+  <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven.compiler.version}</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven.surefire.version}</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
