--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <java.version>1.8</java.version>
     <junit.version>4.12</junit.version>
     <cucumber.version>5.6.0</cucumber.version>
-    <maven.compiler.version>3.8.1</maven.compiler.version>
+    <maven.compiler.version>3.6.1</maven.compiler.version>
     <maven.surefire.version>2.22.1</maven.surefire.version>
   </properties>
   
@@ -41,6 +41,12 @@
 			<artifactId>cucumber-java</artifactId>
 			<version>1.2.5</version>
 		</dependency>  
+		
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
+		</dependency>
   </dependencies>
   
   <build>
