--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <java.version>1.8</java.version>
     <junit.version>4.12</junit.version>
     <cucumber.version>5.6.0</cucumber.version>
-    <!-- <maven.compiler.version>3.6.1</maven.compiler.version> -->
-    <!-- <maven.surefire.version>2.22.1</maven.surefire.version> -->
+    <maven.compiler.version>3.6.1</maven.compiler.version>
+    <maven.surefire.version>2.22.1</maven.surefire.version>
   </properties>
   
   
@@ -50,7 +50,7 @@
   </dependencies>
   
   <build>
-       <!--   <plugins>
+       	<plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -66,6 +66,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.version}</version>
             </plugin>
-        </plugins> -->
+        </plugins>
     </build>
 </project>
